tests/NormalTests/paczka1/fuzzy1/44454008.err
Error in line 2: dKLcN S711 94,0
Error in line 1: ak7X2Dc S560 49,4
Error in line 7: aij S465 89,2
Error in line 6: AMT6GQxcvr8 A418 72,3
Error in line 27: eSaqKltZs S560 -3,8
Error in line 23: ak7X2Dc A418 74,2
Error in line 26: eSaqKltZs S560 55,7
